[package]
name = "text-to-png"
version = "0.3.0"
edition = "2021"
authors = ["Kevin Guthrie <kevin.guthrie@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A simple way to render text to a png image with basic options"
readme = "README-COPY.md"
repository = "https://github.com/RookAndPawn/text-to-png"
keywords = ["text", "font", "rendering", "png", "svg"]
categories = ["encoding", "game-development", "text-processing", "visualization"]

[lib]
name = "text_to_png"
path = "src/lib.rs"

[dependencies]
lazy_static="1.4.0"
fontdb="0.7.0"
usvg="0.19.0"
resvg={version = "0.19.0", default-features = false, features = ["text"] }
tiny-skia="0.6.1"
xml-rs="0.8.24"
derive-new="0.7.0"
siphasher="1.0"
thiserror="2"
png="0.17.2"

[dev-dependencies]
float-cmp="0.10.0"
image = "0.20"
lcs-image-diff = { version = "0.1", default-features = false }
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8.4"

[[bench]]
name = "render_bench_100pt"
harness = false
